@@ -24,6 +24,7 @@
 	<label index="show">Zeigen</label>
 	<label index="showDetails">Details anzeigen</label>
 	<label index="showMore">Mehr anzeigen</label>
+	<label index="listing.noItems">Es wurden keine Einträge gefunden.</label>
 	<label index="hide">Verstecken</label>
 	<label index="unhide">Sichtbar machen</label>
 	<label index="rename">Umbenennen</label>
