@@ -25,6 +25,7 @@
 	<label index="show">Show</label>
 	<label index="showDetails">Show Details</label>
 	<label index="showMore">Show More</label>
+	<label index="listing.noItems">No Items found.</label>
 	<label index="hide">Hide</label>
 	<label index="unhide">Unhide</label>
 	<label index="rename">Rename</label>
